--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
 
 @font-face {
   font-family: 'JustBubble';
-  src: url('/baby-shower-invitation/fonts/JustBubble.ttf') format('truetype');
+  src: url('/fonts/JustBubble.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,7 +30,7 @@ body {
 /* Segunda fuente: Girl */
 @font-face {
   font-family: 'Girl';
-  src: url('/baby-shower-invitation/fonts/Girl.otf') format('truetype');
+  src: url('/fonts/Girl.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -38,7 +38,7 @@ body {
 /* Segunda fuente: Girl 1 */
 @font-face {
   font-family: 'Girl1';
-  src: url('/baby-shower-invitation/fonts/BabyGirlMonolineRegular.ttf') format('truetype');
+  src: url('/fonts/BabyGirlMonolineRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -46,7 +46,7 @@ body {
 /* Segunda fuente: Girl 2 */
 @font-face {
   font-family: 'Girl2';
-  src: url('/baby-shower-invitation/fonts/GirlRegular.ttf') format('truetype');
+  src: url('/fonts/GirlRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -54,14 +54,14 @@ body {
 /* Segunda fuente: Girl 2 */
 @font-face {
   font-family: 'Bubble_Bash';
-  src: url('/baby-shower-invitation/fonts/BubbleBash.otf') format('truetype');
+  src: url('/fonts/BubbleBash.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Kidsbee';
-  src: url('/baby-shower-invitation/fonts/Babydoll.otf') format('truetype');
+  src: url('/fonts/Babydoll.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
